template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_ScoBuild_1_name": {
            "defaultValue": "ScoBuild-1",
            "type": "String"
        },
        "publicIPAddresses_scobuildbuild_name": {
            "defaultValue": "scobuildbuild",
            "type": "String"
        },
        "networkInterfaces_ScoBuild_nic_0_name": {
            "defaultValue": "ScoBuild-nic-0",
            "type": "String"
        },
        "virtualNetworks_scobuild_055317d8_name": {
            "defaultValue": "scobuild-055317d8",
            "type": "String"
        },
        "loadBalancers_scobuild_loadbalancer_name": {
            "defaultValue": "scobuild-loadbalancer",
            "type": "String"
        },
        "sqlVirtualMachines_scobuild_1_name": {
            "defaultValue": "scobuild-1",
            "type": "String"
        },
        "storageAccounts_scobuildcfcf19410115985c_name": {
            "defaultValue": "scobuildcfcf19410115985c",
            "type": "String"
        },
        "schedules_shutdown_computevm_scobuild_1_name": {
            "defaultValue": "shutdown-computevm-scobuild-1",
            "type": "String"
        },
        "networkSecurityGroups_scobuild_networksecuritygroup_name": {
            "defaultValue": "scobuild-networksecuritygroup",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkSecurityGroups_scobuild_networksecuritygroup_name')]",
            "location": "northcentralus",
            "tags": {
                "displayName": "NSG - Front End",
                "SkipNRMSMgmt": "Pending"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "https-1-rule",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule",
                        "properties": {
                            "description": "Deny WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 250,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule-1",
                        "properties": {
                            "description": "Allow WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "191.239.20.104",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 221,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule-2",
                        "properties": {
                            "description": "Allow WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "40.76.5.241",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 222,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule-3",
                        "properties": {
                            "description": "Allow WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "40.112.209.123",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 223,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule-4",
                        "properties": {
                            "description": "Allow WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "40.121.208.21",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 224,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "powershell-remote-rule-5",
                        "properties": {
                            "description": "Allow WinRM",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "40.118.145.241",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 225,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "rdp-rule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[parameters('publicIPAddresses_scobuildbuild_name')]",
            "location": "northcentralus",
            "tags": {
                "displayName": "LoadBalancerPublicIP"
            },
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "65.52.6.220",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 15,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('publicIPAddresses_scobuildbuild_name')]",
                    "fqdn": "[concat(parameters('publicIPAddresses_scobuildbuild_name'), '.northcentralus.cloudapp.azure.com')]"
                },
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2021-04-01",
            "name": "[parameters('storageAccounts_scobuildcfcf19410115985c_name')]",
            "location": "northcentralus",
            "tags": {
                "displayName": "AXStorageAccount",
                "logicalName": "Application Storage Account"
            },
            "sku": {
                "name": "Standard_GRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "services": {
                        "file": {
                            "keyType": "Account",
                            "enabled": true
                        },
                        "blob": {
                            "keyType": "Account",
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "name": "[parameters('virtualMachines_ScoBuild_1_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ScoBuild_nic_0_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS12_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftDynamicsAX",
                        "offer": "Dynamics",
                        "sku": "Pre-Req-AX7-Onebox-U8",
                        "version": "7.0.20201016"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "ScoBuild-osdisk",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-osdisk')]"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": [
                        {
                            "lun": 7,
                            "name": "ScoBuild-buildDisk",
                            "createOption": "Attach",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-buildDisk')]"
                            },
                            "diskSizeGB": 24,
                            "toBeDetached": false
                        },
                        {
                            "lun": 0,
                            "name": "ScoBuild-dataDisk0",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk0')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 1,
                            "name": "ScoBuild-dataDisk1",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk1')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 2,
                            "name": "ScoBuild-dataDisk2",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk2')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 3,
                            "name": "ScoBuild-dataDisk3",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk3')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 4,
                            "name": "ScoBuild-dataDisk4",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk4')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 5,
                            "name": "ScoBuild-dataDisk5",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk5')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        },
                        {
                            "lun": 6,
                            "name": "ScoBuild-dataDisk6",
                            "createOption": "Empty",
                            "caching": "None",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS",
                                "id": "[resourceId('Microsoft.Compute/disks', 'ScoBuild-dataDisk6')]"
                            },
                            "diskSizeGB": 256,
                            "toBeDetached": false
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ScoBuild_1_name')]",
                    "adminUsername": "Admin0971ccb9f5",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true,
                        "patchSettings": {
                            "patchMode": "AutomaticByOS",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ScoBuild_nic_0_name'))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2021-03-01",
            "name": "[concat(parameters('virtualMachines_ScoBuild_1_name'), '/AzureNetworkWatcherExtension')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ScoBuild_1_name'))]"
            ],
            "properties": {
                "autoUpgradeMinorVersion": true,
                "publisher": "Microsoft.Azure.NetworkWatcher",
                "type": "NetworkWatcherAgentWindows",
                "typeHandlerVersion": "1.4"
            }
        },
        {
            "type": "microsoft.devtestlab/schedules",
            "apiVersion": "2018-09-15",
            "name": "[parameters('schedules_shutdown_computevm_scobuild_1_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ScoBuild_1_name'))]"
            ],
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "0000"
                },
                "timeZoneId": "India Standard Time",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30,
                    "notificationLocale": "en"
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ScoBuild_1_name'))]"
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2020-11-01",
            "name": "[parameters('loadBalancers_scobuild_loadbalancer_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_scobuildbuild_name'))]"
            ],
            "tags": {
                "displayName": "LoadBalancer"
            },
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "buildLBFrontEnd",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_scobuildbuild_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [],
                "loadBalancingRules": [],
                "probes": [],
                "inboundNatRules": [
                    {
                        "name": "vm-https-vm-build0",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                            },
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "enableTcpReset": false
                        }
                    },
                    {
                        "name": "vm-winrm-vm-build1",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                            },
                            "frontendPort": 53095,
                            "backendPort": 5986,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "enableTcpReset": false
                        }
                    },
                    {
                        "name": "vm-rdp-vm-build1",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                            },
                            "frontendPort": 52995,
                            "backendPort": 3389,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "enableTcpReset": false
                        }
                    }
                ],
                "inboundNatPools": []
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('loadBalancers_scobuild_loadbalancer_name'), '/vm-https-vm-build0')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name'))]"
            ],
            "properties": {
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                },
                "frontendPort": 443,
                "backendPort": 443,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp",
                "enableTcpReset": false
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('loadBalancers_scobuild_loadbalancer_name'), '/vm-rdp-vm-build1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name'))]"
            ],
            "properties": {
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                },
                "frontendPort": 52995,
                "backendPort": 3389,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp",
                "enableTcpReset": false
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('loadBalancers_scobuild_loadbalancer_name'), '/vm-winrm-vm-build1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name'))]"
            ],
            "properties": {
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_scobuild_loadbalancer_name')), '/frontendIPConfigurations/buildLBFrontEnd')]"
                },
                "frontendPort": 53095,
                "backendPort": 5986,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp",
                "enableTcpReset": false
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/https-1-rule')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow HTTPS",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Deny WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 250,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule-1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "191.239.20.104",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 221,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule-2')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "40.76.5.241",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 222,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule-3')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "40.112.209.123",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 223,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule-4')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "40.121.208.21",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 224,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/powershell-remote-rule-5')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow WinRM",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5986",
                "sourceAddressPrefix": "40.118.145.241",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 225,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'), '/rdp-rule')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "description": "Allow RDP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 150,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[parameters('virtualNetworks_scobuild_055317d8_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "tags": {
                "displayName": "VirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "AX-APPNET-368f83a8",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
                            },
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "appGatewaySubnet",
                        "properties": {
                            "addressPrefix": "10.1.2.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_scobuild_055317d8_name'), '/appGatewaySubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_scobuild_055317d8_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.1.2.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.SqlVirtualMachine/sqlVirtualMachines",
            "apiVersion": "2017-03-01-preview",
            "name": "[parameters('sqlVirtualMachines_scobuild_1_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ScoBuild_1_name'))]"
            ],
            "properties": {
                "virtualMachineResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_ScoBuild_1_name'))]",
                "sqlImageOffer": "SQL2016-WS2016",
                "sqlServerLicenseType": "PAYG",
                "sqlManagement": "LightWeight",
                "sqlImageSku": "Developer"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "sku": {
                "name": "Standard_GRS",
                "tier": "Standard"
            },
            "properties": {
                "cors": {
                    "corsRules": []
                },
                "deleteRetentionPolicy": {
                    "enabled": false
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/fileServices",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "sku": {
                "name": "Standard_GRS",
                "tier": "Standard"
            },
            "properties": {
                "protocolSettings": {
                    "smb": {}
                },
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/queueServices",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/tableServices",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_scobuild_055317d8_name'), '/AX-APPNET-368f83a8')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_scobuild_055317d8_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.1.1.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_scobuild_networksecuritygroup_name'))]"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default/retail-cdx-down-68719495571')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices', parameters('storageAccounts_scobuildcfcf19410115985c_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "properties": {
                "defaultEncryptionScope": "$account-encryption-key",
                "denyEncryptionScopeOverride": false,
                "publicAccess": "None"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default/selfservicepackages')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices', parameters('storageAccounts_scobuildcfcf19410115985c_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ],
            "properties": {
                "defaultEncryptionScope": "$account-encryption-key",
                "denyEncryptionScopeOverride": false,
                "publicAccess": "None"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/tableServices/tables",
            "apiVersion": "2021-04-01",
            "name": "[concat(parameters('storageAccounts_scobuildcfcf19410115985c_name'), '/default/SharedStorageDetails')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/tableServices', parameters('storageAccounts_scobuildcfcf19410115985c_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_scobuildcfcf19410115985c_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkInterfaces_ScoBuild_nic_0_name')]",
            "location": "northcentralus",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_scobuild_055317d8_name'), 'AX-APPNET-368f83a8')]",
                "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-rdp-vm-build1')]",
                "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-winrm-vm-build1')]",
                "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-https-vm-build0')]"
            ],
            "tags": {
                "displayName": "VM_NIC"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig",
                        "properties": {
                            "privateIPAddress": "10.1.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_scobuild_055317d8_name'), 'AX-APPNET-368f83a8')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-rdp-vm-build1')]"
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-winrm-vm-build1')]"
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_scobuild_loadbalancer_name'), 'vm-https-vm-build0')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false
            }
        }
    ]
}
